把图片存储到bundle

--- a/BTScanVC/BTScanVC/Info.plist
+++ b/BTScanVC/BTScanVC/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSCameraUsageDescription</key>
-	<string>扫描程序想使用相机</string>
+	<string>扫描程序想使用您的相机</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
